--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -4,14 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AirBnB Clone</title>
+    <title>Airbnb_clone</title>
 </head>
-<body style="margin: 0; padding: 0;">
+<body style="padding: 0px; margin: 0px; height: 100vh; position: relative;">
     <header style="background-color: #FF0000; height: 70px; width: 100%;"></header>
-    <footer style="background-color: #00FF00; height: 60px; display: grid;
-        width: 100%; position: absolute; bottom: 0; align-items: center;
-        justify-content: center;">
-        Best School
+    <footer style="background-color: #00FF00; height: 60px; width: 100%; position: absolute; bottom: 0px; display: grid; place-items: center;">
+        <p>Best School</p>
     </footer>
 </body>
 </html>
